# Medical-Visual-Question-Answering-Using-LRCN

./: .gitignore  README.md  flake.nix  main.py  pyproject.toml  tes.ipynb  test_model.py
notebooks/: main.ipynb  medvqa_kaggle_colab.ipynb  tes.ipynb
src/medvqa/: __init__.py
src/medvqa/core/: __init__.py  base.py  config.py  download_utils.py
src/medvqa/datamodules/: __init__.py  common.py  slake.py  slake_loader.py  vqa_dataset.py  vqa_rad.py  vqa_rad_loader.py
src/medvqa/models/: __init__.py  attention.py  device_utils.py  lrcn.py  pytorch_vit_encoder.py  text_encoder.py  visual_encoder.py
src/medvqa/preprocessing/: __init__.py  image_preprocessing.py  text_preprocessing.py
src/medvqa/scripts/: _common.py  download_all.py  download_slake.py  download_vqa_rad.py  evaluate_model.py  get_all_data.py  get_slake_hf.py  get_vqa_rad_osf.py  preprocess_datasets.py  preview_data.py  preview_datasets.py  train_lrcn.py  visualize_results.py
