[project]
name = "MedVQA-LRCN"
version = "0.1.0"
description = "Adaptation of Layer-Residual Co-Attention Network (LRCN) for Medical Visual Question Answering (MedVQA)"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "datasets>=4.0.0",
    "ipykernel>=6.30.1",
    "numpy>=2.3.2",
    "osfclient>=0.0.5",
    "torch>=2.0.0",
    "transformers>=4.30.0",
    "huggingface-hub>=0.16.0",
]

[tool.uv]
package = true


[project.scripts]
download-vqa-rad = "medvqa.scripts.download_vqa_rad:main"
download-slake = "medvqa.scripts.download_slake:main"  
download-all-datasets = "medvqa.scripts.download_all:main"
preview-datasets = "medvqa.scripts.preview_datasets:main"

